--- a/flowable-action-guide/pom.xml
+++ b/flowable-action-guide/pom.xml
@@ -35,7 +35,7 @@
         <dependency>
             <groupId>org.flowable</groupId>
             <artifactId>flowable-engine</artifactId>
-            <version>6.4.1</version>
+            <version>${flowable.version}</version>
         </dependency>
 
         <dependency>
@@ -54,7 +54,6 @@
             <artifactId>junit</artifactId>
             <version>4.12</version>
         </dependency>
-
 
     </dependencies>
 
