--- a/flowable-action-guide/pom.xml
+++ b/flowable-action-guide/pom.xml
@@ -37,7 +37,11 @@
             <artifactId>flowable-engine</artifactId>
             <version>${flowable.version}</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.flowable</groupId>
+            <artifactId>flowable-form-engine</artifactId>
+            <version>${flowable.version}</version>
+        </dependency>
         <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>druid</artifactId>
